# rust-backend

./: .env  .env.example  Cargo.toml  README.md  package.json  readme.md
src/: main.rs
src/auth/: mod.rs
src/database/: mod.rs
src/db/: connection.rs
src/entities/: account.rs  mod.rs  prelude.rs  session.rs  user.rs  verification.rs
src/handlers/: users.rs
src/handlers/auth/: login_handlers.rs  logout_handlers.rs  mod.rs  models.rs  refresh_handlers.rs  register_handlers.rs
src/handlers/auth/tests/: integration_tests.rs  login_tests.rs  logout_tests.rs  mod.rs  model_tests.rs  placeholder_tests.rs  refresh_tests.rs  register_tests.rs
src/middlewares/: example.rs
src/services/: user_service.rs
src/utils/: errors.rs  hash.rs  mod.rs  paseto.rs
