[package]
name = "rust-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-web-httpauth = "0.8"
actix-cors = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["macros"] }
dotenvy = "0.15"
pasetors = "0.7.7"
ed25519-dalek = "1"
rand = "0.8"
base64 = "0.21"
thiserror = "1"
cookie = "0.18"
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3.32"
env_logger = "0.11.9"
sea-orm = { version = "2.0.0-rc", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }
validator = { version = "0.20.0", features = ["derive"] }
password-hash = "0.5.0"
argon2 = "0.5.3"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4.3"


